--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-pandas
-plotly
-datetime
-altair 
-pydeck
+streamlit == 1.18.0
+pandas == 1.5.3
+plotly == 5.13.0
+numpy == 1.23.1
+datetime == 5.0
+altair == 4.2.2
+pydeck == 0.8.0
+pyrebase4 == 4.6.0
