--- a/dashboard/.streamlit/config.toml
+++ b/dashboard/.streamlit/config.toml
@@ -1,3 +1,7 @@
+
 [theme]
-base = 'light'
-primaryColor = '#33813f'
+primaryColor = '31c44c'
+backgroundColor = '#F3F7F0'
+secondaryBackgroundColor = '#97f0a6'
+textColor = '#03080C'
+font = 'sans serif'
